Fix inputs to wrap properly

--- a/styles/style.css
+++ b/styles/style.css
@@ -74,14 +74,21 @@ button[type=submit] {
   margin-left: 40px;
 }
 
+.description {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  padding-block: 15px;
+}
+
 .description p {
   font-weight: bold;
   max-width: 55ch;
   line-height: 1.3;
+  margin: 0;
 }
 
 h3 {
-  font-size: 1.3em;
   margin-top: 0;
 }
 
@@ -89,26 +96,26 @@ fieldset {
   border: none;
   background-color: white;
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.204);
-  padding-block: 35px;
+  padding-block: 30px;
 }
 
-.groups {
+.inputs {
   display: flex;
-  gap: 18px 60px;
   flex-wrap: wrap;
+  gap: 20px 60px;
+  width: 80%;
 }
 
-
-
-.group1, .group2 {
-  display: flex;
+.inputGroup {
+  display: flex; 
   flex-direction: column;
+  gap: 5px;  
 }
 
 
 label {
   font-size: .6rem;
-  color: gr;
+  font-weight: 500;
 }
 
 input {
@@ -135,10 +142,11 @@ button {
   border: none;
   padding:10px 30px;
   border-radius: 7px;
+  font-size: .9rem;
 }
 
 .login {
-  margin-top: 30px;
+  margin-top: 25px;
   font-size: .7rem;
 }
 
